<resources>
    <string name="app_name">DRAFT</string>
    <string name="citas">Citas</string>
    <string name="pedidos">Pedidos</string>
    <string name="partners">Partners</string>
    <string name="envios">Envios</string>
    <string name="ejemplo_email_com">ejemplo@email.com</string>
    <string name="_681393521">681393521</string>
    <string name="direccion">Delegación:</string>
    <string name="env_os">Envíos</string>
    <string name="ccitas">Calendario Citas</string>
    <string name="title_activity_mapa">Map</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="seleccionar_producto">Seleccionar producto</string>
    <string name="guardar">Guardar</string>
    <string name="textview"> </string>
    <string name="descripcion">Descripción:</string>
    <string name="titulo_cita">Título cita:</string>
    <string name="cita_para_el_dia">Cita para el dia</string>
    <string name="subtitulo_descripcion">subtitulo</string>
    <string name="titulo_principal">titulo</string>
    <string name="abrir_catalogo">Abrir Catalogo</string>
    <string name="partner">Partner:</string>
    <string name="telefono">Telefono:</string>
    <string name="comercial_asociado">Comercial asociado:</string>
    <string name="correo">Correo:</string>
    <string name="detalles">Detalles</string>
    <string name="nuevo">Nuevo Partner</string>
    <string name="borrar">Borrar</string>
    <string name="editar">Editar</string>
    <string name="title_activity_pedidos">activity_pedidos</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="direcci_n">Dirección</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
</resources>