<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Partners">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvPartners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/partners"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <ListView
            android:id="@+id/lvPartners"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#E2E9EC"
            android:cacheColorHint="#988D8D"
            android:longClickable="true">

        </ListView>

        <TextView
            android:id="@+id/tv_nombrePartner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvTfno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textColor="#000000"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textColor="#000000"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/tvComAso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comercial_asociado"
            android:textColor="#000000"
            android:textSize="17sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNuevo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/nuevo" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>