<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ImgLogo"
            android:layout_width="match_parent"
            android:layout_height="183dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/draft" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="v1.0"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TxDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/direccion"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spnDelegaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnLogin"
                style="@android:style/Widget.DeviceDefault.Light.ImageButton"
                android:layout_width="80dp"
                android:layout_height="75dp"
                android:contentDescription="TODO"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/login"
                tools:srcCompat="@drawable/login" />

            <ImageButton
                android:id="@+id/BtnCorreo"
                style="@android:style/Widget.ImageButton"
                android:layout_width="80dp"
                android:layout_height="75dp"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/mail" />

            <ImageButton
                android:id="@+id/BtnLlamar"
                style="@android:style/Widget.ImageButton"
                android:layout_width="80dp"
                android:layout_height="75dp"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/agenda" />

            <ImageButton
                android:id="@+id/BtnMapa"
                style="@android:style/Widget.ImageButton"
                android:layout_width="80dp"
                android:layout_height="75dp"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/map" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/TxEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ejemplo_email_com" />

            <TextView
                android:id="@+id/TxTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_681393521" />
        </LinearLayout>

        <Button
            android:id="@+id/BtnCitas"
            style="@style/tamañoBotones"
            android:text="@string/citas"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/BtnPartners"
            style="@style/tamañoBotones"
            android:text="@string/partners"
            app:cornerRadius="25dp" />

        <Button
            android:id="@+id/BtnPedidos"
            style="@style/tamañoBotones"
            android:text="@string/pedidos"
            app:cornerRadius="25dp" />

        <Button
            android:id="@+id/BtnEnvios"
            style="@style/tamañoBotones"
            android:text="@string/envios"
            app:cornerRadius="25dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>