<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092">

        <TextView
            android:id="@+id/tvPartners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/partners"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/partner" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Empresa"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dirección" />

        <EditText
            android:id="@+id/etxtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Dirección"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nombre Contacto" />

        <EditText
            android:id="@+id/etxtContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Nombre Contacto"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvTfno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono" />

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="943429742"
            android:inputType="number" />

        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correo" />

        <EditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="example@example.com"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tvComAso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comercial_asociado" />

        <EditText
            android:id="@+id/etNomComercial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="SPINNER CON COMERCIALES PARA EL ID"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btn_guardaPartner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Guardar"
            app:cornerRadius="20dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>